# NQ-Backtest-Engine

./: .gitignore  Makefile  README.md  aws-backtest.yml  pyproject.toml  requirements.txt
.github/workflows/: aws-backtest.yml  ci.yml  publish-dashboard.yml
data/: sample_nq_1m.csv
docs/: aws-oidc-setup.md
infra/: aws-oidc-github.yaml
notebooks/: 03_ai_strategy_generation.ipynb
scripts/: auto_test_nq.sh  build_dashboard.py  download_nq_data.py  export_nt8_strategy.py  generate_dashboard.py  optimize_params.py  run_backtest.py  run_dash_server.py  run_dashboard.py
src/: __init__.py
src/ai/: Makefile  __init__.py  prompt_templates.py  strategy_generator.py
src/data/: __init__.py  loader.py  rth_filter.py
src/engine/: __init__.py  backtest.py  fees.py  portfolio.py
src/strategies/: __init__.py  ema_cross.py  orb_retrace.py  template.py
src/validation/: __init__.py  kpis.py  nt8_parity.py
tests/: test_data_loader.py  test_engine.py  test_fees.py  test_nt8_parity.py
