[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nq-backtest-engine"
version = "0.1.0"
description = "VectorBT-powered backtesting engine for NQ futures, optimized for Amazon Kiro."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NQ-Backtest-Engine contributors" }]
dependencies = [
    "vectorbt>=0.26.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "numba>=0.58",
    "pytz",
    "python-dateutil",
    "pyyaml",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff", "mkdocs"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
